Sat Dec 06 18:01:20 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Allow a FieldGroup, or a set of
	  parameters for making a FieldGroup, to be passed to extend().

Sat Dec 06 18:00:44 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fields.py: Correct a typo in a comment.

Fri Dec 05 11:39:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py: Bump version to 0.5.1, since it's significantly changed
	  since 0.5, and we should probably make a release soon.
	* xappy/: Add GEOLOCATION action, for storing latitude-longitude
	  coordinates, and allowing ranking based on distance.  Add sort by
	  distance method.
	* xappy/unittests/difference.py,xappy/unittests/distance.py:
	  Move distance.py to difference.py, and add new tests for
	  geolocation, field groups, and convenience methods on
	  UnprocessedDocument.

Fri Nov 21 10:09:32 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/field_groups.py: Missed this file from previous
	  commit.

Fri Nov 21 10:03:26 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/__init__.py,xappy/datastructures.py,
	  xappy/doctests/indexerconnection_doctest1.txt,
	  xappy/doctests/indexerconnection_doctest2.txt,
	  xappy/doctests/indexerconnection_doctest3.txt,xappy/,
	  xappy/unittests/docbuild.py: Add shortcut interface for adding
	  fields to document (new UnprocessedDocument.append() and extend()
	  methods).  Add support for FieldGroups, used to group field data
	  instances together, to allow the summarisation code to return
	  fields associated to that which are relevant to the search (in
	  relevant_data()).

	  Changes datastructures on disk - stored documents now have an
	  extra key.  Should be backwards compatible (and this is tested) -
	  ie, new versions of xappy should be able to read old databases.
	  However, old versions of xappy won't be able to read databases
	  created by this version.
