@@ -1,3 +1,13 @@
+Sat Dec 06 18:28:43 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add "group" option to relevant data,
+	  which causes all data in a group which is partly relevant to be
+	  returned.
+	* xappy/unittests/field_associations.py: Test new syntax for
+	  building up documents.
+	* xappy/unittests/field_groups.py: Test group option for
+	  relevant_data().
+
 Sat Dec 06 18:01:20 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/datastructures.py: Allow a FieldGroup, or a set of
